# agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOFF.md  README.md  docker-compose.yml  generate_features_doc.py  todos.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  api_schemas.py  config.py  data_access.py  logging_config.py  main.py  setup.py
backend/app/actions/: __init__.py  chart_action.py  email_action.py  export_action.py  insights_action.py  reorder_action.py
backend/app/agents/: __init__.py  analytics_agent.py  base.py  chat_client.py  context.py  contracts.py  data_agent.py  di.py  errors.py  explanation_agent.py  explanation_backend.py  guardrails.py  logging.py  orchestrator.py  planning_agent.py  recommendation_agent.py  registration.py  retry.py  risk_agent.py  router.py  scenario_agent.py  service.py  timing.py  tools.py  (+3 more)
backend/data/: generate_dataset.py  schema.md  validate_dataset.py
backend/datasets/: .gitkeep
backend/outputs/: .gitkeep
backend/simulator/: __init__.py  calendars.py  change_log.py  config.py  engine.py  run_simulator.py  schema.py  seed_generator.py  serialization.py  state_loader.py  utils.py  writer.py
backend/tests/: test_actions.py  test_agents.py  test_analytics.py  test_api.py  test_backend.py  test_chat.py  test_deliveries.py  test_domain_models.py  test_explanation.py  test_health.py  test_ingestion.py  test_monitoring.py  test_optimization.py  test_recommendation.py  test_risk.py  test_rules.py  test_scenario.py  test_simulator.py
(+281 files in other folders)
