[project]
name = "production-planner-backend"
version = "0.1.0"
description = "Enterprise Production Planning & Schedule Optimization Agent - backend"
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
